[gd_scene load_steps=20 format=3 uid="uid://chx7thagnyp1j"]

[ext_resource type="PackedScene" uid="uid://c0650xa4eujml" path="res://circuit_build/Main.tscn" id="2_l206u"]
[ext_resource type="Script" path="res://brain_visualizer_source/Button_to_Autoload.gd" id="2_t7fr6"]
[ext_resource type="Script" path="res://brain_visualizer_source/box_loading.gd" id="10_uh1ag"]
[ext_resource type="FontFile" uid="uid://b6po0obfn5wkp" path="res://brain_visualizer_source/Glegoo-Bold.ttf" id="21_ptep2"]
[ext_resource type="Script" path="res://Official_world_scripts/scene_transition.gd" id="31_pws3t"]
[ext_resource type="Script" path="res://NeuroRobotics-Studio/Core.gd" id="31_vv2v0"]
[ext_resource type="PackedScene" uid="uid://c7v5wwar1gqjo" path="res://NeuroRobotics-Studio/UI_Manager.tscn" id="32_fbal3"]
[ext_resource type="PackedScene" uid="uid://drgmyyduq6gd2" path="res://UI/UnitGraph/graphCore.tscn" id="33_6l54b"]
[ext_resource type="PackedScene" uid="uid://bxto6lw73h6ee" path="res://brain_visualizer_source/FEAGI_monitor.tscn" id="34_jfnov"]
[ext_resource type="PackedScene" uid="uid://bfnfbf56w0t5p" path="res://Network/Library/SimpleNetworkAPI.tscn" id="35_aljtt"]
[ext_resource type="Script" path="res://NeuroRobotics-Studio/FeagiCache.gd" id="36_hp4op"]
[ext_resource type="Script" path="res://animation_teaser.gd" id="38_kkmm1"]

[sub_resource type="Animation" id="Animation_4kct8"]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_23r5b"]
resource_name = "dissolve"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_laiqv"]
_data = {
"RESET": SubResource("Animation_4kct8"),
"dissolve": SubResource("Animation_23r5b")
}

[sub_resource type="FontFile" id="FontFile_jm7r5"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("21_ptep2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_2tyrg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(60, 60, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation_edit_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation_order")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_74dof"]
resource_name = "animation"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(60, 60, 100), Vector3(36.7456, 60, 100), Vector3(-52.6999, 60, 50.5429), Vector3(-52.6999, 60, 50.5429)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.180275, 0), Vector3(0, -1.07542, 0), Vector3(0, -1.07542, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation_edit_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 4, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation_order")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2, 4, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 2, 2, 2]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2, 4, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 1, 1), Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ptci2"]
_data = {
"RESET": SubResource("Animation_2tyrg"),
"animation": SubResource("Animation_74dof")
}

[node name="Official_World" type="Node3D"]
script = ExtResource("31_pws3t")
metadata/_edit_horizontal_guides_ = [-254.0]

[node name="Button_to_Autoload" type="Node2D" parent="."]
script = ExtResource("2_t7fr6")

[node name="Control" parent="." instance=ExtResource("2_l206u")]
visible = false
offset_left = 340.0
offset_top = 126.0
offset_right = 340.0
offset_bottom = 126.0
mouse_filter = 2

[node name="scene_transition" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="scene_transition"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.317647, 1, 1, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="scene_transition"]
libraries = {
"": SubResource("AnimationLibrary_laiqv")
}

[node name="Core" type="Node3D" parent="."]
process_priority = 1
script = ExtResource("31_vv2v0")

[node name="GlobalNetworkSystem" parent="Core" instance=ExtResource("35_aljtt")]

[node name="FeagiCache" type="Node" parent="Core"]
script = ExtResource("36_hp4op")

[node name="GlobalUISystem" parent="Core" instance=ExtResource("32_fbal3")]
focus_mode = 1
mouse_filter = 1

[node name="graphCore" parent="Core/GlobalUISystem" instance=ExtResource("33_6l54b")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 1037.0
offset_bottom = 600.0

[node name="Brain_Visualizer" parent="Core/GlobalUISystem" instance=ExtResource("34_jfnov")]

[node name="box_loading" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.677951
anchor_top = 0.430556
anchor_right = 0.838542
anchor_bottom = 0.530864
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(0, -1)
size_flags_horizontal = 8
color = Color(0.0196078, 0.0196078, 0.0196078, 1)
script = ExtResource("10_uh1ag")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="box_loading"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0136986
anchor_top = -0.0519481
anchor_right = 1.03378
anchor_bottom = 1.05411
offset_left = 13.0411
offset_top = 6.37663
offset_right = -220.431
offset_bottom = 6.48285
theme_override_fonts/font = SubResource("FontFile_jm7r5")
text = "Loading genome.."

[node name="Button" type="Button" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.785
anchor_right = 0.788
offset_left = -56.32
offset_right = 59.2239
offset_bottom = 31.0
grow_horizontal = 0
text = "Circuit Builder"

[node name="animation_button" type="Button" parent="."]
visible = false
offset_left = 1672.0
offset_top = 172.0
offset_right = 1771.0
offset_bottom = 222.0
text = "animation_teaser"
script = ExtResource("38_kkmm1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("Camera3D")
libraries = {
"": SubResource("AnimationLibrary_ptci2")
}

[node name="Camera3D" type="Camera3D" parent="AnimationPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 60, 100)

[node name="color_indicator" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 158.0
offset_bottom = 12.248

[node name="ColorRect" type="ColorRect" parent="color_indicator"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 28.0
offset_bottom = 59.0
tooltip_text = "burst_engine"
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="color_indicator"]
layout_mode = 0
offset_left = 32.0
offset_top = 8.0
offset_right = 52.0
offset_bottom = 59.0
tooltip_text = "genome_availability"
color = Color(0, 0, 0, 1)

[node name="ColorRect3" type="ColorRect" parent="color_indicator"]
layout_mode = 0
offset_left = 56.0
offset_top = 8.0
offset_right = 76.0
offset_bottom = 59.0
tooltip_text = "genome_validity"
color = Color(0, 0, 0, 1)

[node name="ColorRect4" type="ColorRect" parent="color_indicator"]
layout_mode = 0
offset_left = 80.0
offset_top = 8.0
offset_right = 100.0
offset_bottom = 59.0
tooltip_text = "brain_readiness"
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="animation_button" to="animation_button" method="_on_pressed"]
